--- a/frontend/modal.html
+++ b/frontend/modal.html
@@ -1,14 +1,34 @@
      <div class="modal micromodal-slide" id="modal-1" aria-hidden="true">
   <div class="modal__overlay" tabindex="-1" data-micromodal-close>
     <div class="modal__container" role="dialog" aria-modal="true" aria-labelledby="modal-1-title">
+      <button class="modal__close" aria-label="Close modal" data-micromodal-close>×</button>
       <header class="modal__header">
         <h2 class="modal__title" id="modal-1-title">
           Modal Title
         </h2>
-        <button class="modal__close" aria-label="Close modal" data-micromodal-close></button>
       </header>
       <div class="modal__content" id="modal-1-content">
-        Modal Content
+        <div class="add-plan-container">
+          <button id="add-plan-btn" class="add-plan-btn">+ Add Plan</button>
+        </div>
+        <div id="plan-input-container" style="display: none;">
+          <input type="text" id="plan-input" placeholder="Enter your plan...">
+          <select id="importance-select">
+            <option value="optional">Optional</option>
+            <option value="important">Important</option>
+            <option value="mandatory">Mandatory</option>
+          </select>
+          <div style="margin: 10px 0;">
+            <label style="font-size: 0.95em;">
+              <input type="checkbox" id="scheduled-checkbox"> Scheduled for time
+            </label>
+          </div>
+          <div id="time-input-container" style="display: none;">
+            <input type="time" id="plan-time" style="width: 100%;">
+          </div>
+          <button id="save-plan-btn">Save Plan</button>
+        </div>
+        <div id="plans-list"></div>
       </div>
     </div>
   </div>
