modal v1.1(plans added)

--- a/frontend/calendar.html
+++ b/frontend/calendar.html
@@ -22,6 +22,7 @@
     <div id="calendar-grid" class="calendar-grid"></div>
   </div>
   <!-- Modal -->
+   <script src="https://unpkg.com/micromodal/dist/micromodal.min.js"></script>
   <script type="module" src="js/api.js"></script>
   <script type="module" src="js/modal.js"></script>
   <script type="module" src="js/calendar.js"></script>
