--- a/frontend/calendar.html
+++ b/frontend/calendar.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <header>
-    <a>About sus</a>
+    <a>About us</a>
     <a href="http://127.0.0.1:5500/frontend/index.html" style="color:cornsilk">Sign out</a>
   </header>
   <div class="calendar-container">
